<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:layout_marginBaseline="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label1_totalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/label1_totalBill"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edText_totalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="#daf5e1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/label1_totalBill"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label1_totalBill"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/label2_tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/label2_tipPercent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1_totalBill" />

    <RadioGroup
        android:id="@+id/RGroup"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        android:onClick="TipCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2_tipPercent">

        <RadioButton
            android:id="@+id/twelvePercent_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="TipCalculator"
            android:buttonTint="#673AB7"
            android:checked="false"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:text="@string/twelvePercent_RB"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/fifteenPercent_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="TipCalculator"
            android:buttonTint="#673AB7"
            android:checked="false"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:text="@string/fifteenPercent_RB"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/eighteenPercent_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#673AB7"
            android:onClick="TipCalculator"
            android:checked="false"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:text="@string/eighteenPercent_RB"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/twentyPercent_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="TipCalculator"
            android:buttonTint="#673AB7"
            android:checked="false"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:text="@string/twentyPercent_RB"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/label3_tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/label3_tipAmount"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label2_tipPercent" />

    <TextView
        android:id="@+id/tView_totalTipAmount"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="5dp"
        android:background="#cfd1d0"
        android:fontFamily="sans-serif-light"
        android:labelFor="@id/label3_tipAmount"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/textView_totalTipAmount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edText_totalBill"
        app:layout_constraintStart_toStartOf="@id/label3_tipAmount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label4_totalWithTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/label4_totalWithTip"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label3_tipAmount" />

    <TextView
        android:id="@+id/tView_totalWithTip"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="5dp"
        android:background="#cfd1d0"
        android:fontFamily="sans-serif-light"
        android:labelFor="@id/label4_totalWithTip"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/textView_totalTipAmount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edText_totalBill"
        app:layout_constraintStart_toStartOf="@id/label4_totalWithTip"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="34dp"
        android:background="?android:attr/listDivider"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="@id/tView_totalWithTip"
        app:layout_constraintStart_toStartOf="@id/label4_totalWithTip"
        app:layout_constraintTop_toBottomOf="@+id/tView_totalWithTip" />

    <TextView
        android:id="@+id/label5_numberOfPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/label5_numberOfPeople"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/edText_totalPeople"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="292dp"
        android:background="#daf5e1"
        android:ems="10"
        android:includeFontPadding="true"
        android:inputType="numberDecimal"
        android:labelFor="@id/label1_totalBill"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/label5_numberOfPeople"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:onClick="goBtn"
        android:text="@string/goButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edText_totalPeople"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/label6_totalPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-dark"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/label6_totalPerPerson"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label5_numberOfPeople" />

    <TextView
        android:id="@+id/tView_totalPerPerson"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="5dp"
        android:background="#cfd1d0"
        android:fontFamily="sans-serif-light"
        android:labelFor="@id/label6_totalPerPerson"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonGo"
        app:layout_constraintStart_toStartOf="@id/label6_totalPerPerson"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:onClick="clearAllFields"
        android:text="@string/clearButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tView_totalPerPerson"
        app:layout_constraintVertical_bias="0.174" />


</androidx.constraintlayout.widget.ConstraintLayout>